--- a/config.yml
+++ b/config.yml
@@ -22,6 +22,7 @@ build:
     # Copied files to public folder when build
     copy:
         - "source/images"
+        - "source/attachments"
     # Excuted command when use 'ink publish'
     publish: |
         cd blog
