--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - git config user.email "570359547@qq.com"
   - git add .
   - git commit -m "update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" html:html
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:html
 
 # after-script:
 # E: Build Lifecycle
